cv minor update

--- a/pdfs/cv/cv.tex
+++ b/pdfs/cv/cv.tex
@@ -153,7 +153,7 @@ Venus Aerogravity Assist Performance Assessment & \hfill Aug 2022 - Jan 2023 \\[
             \begin{itemize}[nosep,after=\strut, leftmargin=1em, itemsep=3pt]
                 \item[--] Analyzed the performance of blunt-body vehicles in Venus aerogravity assist missions.
                 % \item[--] Compared several performance characteristics for blunt-body vehicles with previously studied waverider vehicle concepts.
-                \item[--] Implemented a MATLAB analysis pipeline to perform parameter sweeps for varying trajectories and vehicle configurations, and assessed performance of blunt-body vehicles and waveriders.
+                \item[--] Implemented a MATLAB analysis pipeline to perform parameter sweeps for varying trajectories and vehicle configurations and used it to assessed performance of blunt-body vehicles and waveriders.
             \end{itemize}
         \end{minipage}
     }
@@ -211,7 +211,7 @@ Teaching Assistant for AE 352: Aerospace Dynamical Systems & \hfill Aug 2021 - D
         \multicolumn{2}{@{}X@{}}{
             \begin{minipage}[t]{\linewidth}
                 \begin{itemize}[nosep,after=\strut, leftmargin=1em, itemsep=3pt]
-                    \item[--] Assisted with grading for a new course focused on using Python to solve problems such as analyzing air traffic data and designing martian landers.
+                    \item[--] Assisted with grading for a new course focused on using Python to solve problems such as analyzing air traffic data and designing Martian landers.
                     \item[--] Worked with instructor to augment course for a fully online learning environment without affecting students due to the COVID-19 pandemic.
                 \end{itemize}
             \end{minipage}
