--- a/pdfs/cv/cv.tex
+++ b/pdfs/cv/cv.tex
@@ -115,15 +115,35 @@ B.S. in Aerospace Engineering, University of Illinois at Urbana-Champaign & \hfi
 % EXPERIENCE SECTIONS
 %----------------------------------------------------------------------------------------
 
-%Interests/ Keywords/ Summary
-% \section{Summary}
-% Add summary here
+% Work Experience
+\section{Work Experience}
+\begin{tabularx}{\linewidth}{ @{}l r@{} }
+\textbf{NASA Jet Propulsion Laboratory} & \hfill Advisors: Steven Chesley, Davide Farnocchia \\[3.75pt]
+NSTGRO Visiting Technologist & \hfill May 2023 - Aug 2023 \\[3.75pt]
+    \multicolumn{2}{@{}X@{}}{
+        \begin{minipage}[t]{\linewidth}
+            \begin{itemize}[nosep,after=\strut, leftmargin=1em, itemsep=3pt]
+                \item[--] Validated an efficient solar system propagator with sub\,-1\,km position accuracy over 250 years compared to JPL's internal small body software.
+                \item[--] Developed an orbit determination submodule alongside the propagator that has sub\,-\,1$\sigma$ agreement with JPL small-body orbit solutions.
+                \item[--] Presented a publicly available Python package, \textsc{grss}, to allow the scientific community to accurately propagate and determine the orbits of solar system bodies. 
+            \end{itemize}
+        \end{minipage}
+    }
+\end{tabularx}
 
-
-% \begin{tabularx}{\linewidth}{ @{}l r@{} }
-% \textbf{Designation} & \hfill Jan 2021 - present \\[3.75pt]
-% \multicolumn{2}{@{}X@{}}{long long line of blah blah that will wrap when the table fills the column width long long line of blah blah that will wrap when the table fills the column width long long line of blah blah that will wrap when the table fills the column width long long line of blah blah that will wrap when the table fills the column width}  \\
-% \end{tabularx}
+\begin{tabularx}{\linewidth}{ @{}l r@{} }
+\textbf{NASA Goddard Space Flight Center} & \hfill Advisors: Kenneth Getzandanner, Andrew Liounis \\[3.75pt]
+OSIRIS-REx/OSIRIS-APEX Celestial Navigation Intern & \hfill Jun 2022 - Aug 2022 \\[3.75pt]
+    \multicolumn{2}{@{}X@{}}{
+        \begin{minipage}[t]{\linewidth}
+            \begin{itemize}[nosep,after=\strut, leftmargin=1em, itemsep=3pt]
+                \item[--] Developed simulations to assess performance of celestial navigation using onboard optical instruments during the OSIRIS-APEX cruise phase.
+                \item[--] Simulated more than 8,000 solar system bodies to obtain optimal observable clusters for the spacecraft.
+                \item[--] Performed covariance analysis using NASA's MONTE software to study the spacecraft's state uncertainty on its way to asteroid (99942) Apophis.
+            \end{itemize}
+        \end{minipage}
+    }
+\end{tabularx}
 
 % Research Experience
 \section{Research Experience}
@@ -146,44 +166,26 @@ Double Asteroid Redirection Test (DART) Mission & \hfill May 2020 - present \\[3
 \end{tabularx}
 
 \begin{tabularx}{\linewidth}{ @{}l r@{} }
+    Gauss-Radau Small-body Simulator (GRSS) & \hfill Nov 2022 - present \\[3.75pt]
+        \multicolumn{2}{@{}X@{}}{
+            \begin{minipage}[t]{\linewidth}
+                \begin{itemize}[nosep,after=\strut, leftmargin=1em, itemsep=3pt]
+                    \item[--] Released an open-source Python library with a C++ binding for use by the planetary defense community.
+                    \item[--] Developed a high-accuracy propagator for solar system bodies using Gauss-Radau quadrature.
+                    \item[--] Built an orbit determination code for estimating small body orbits using optical and radar observations.
+                \end{itemize}
+            \end{minipage}
+        }
+\end{tabularx}
+
+\begin{tabularx}{\linewidth}{ @{}l r@{} }
 \textbf{Aerospace Mission Analysis Laboratory} & \hfill Advisor: Dr. Zachary Putnam \\[3.75pt]
 Venus Aerogravity Assist Performance Assessment & \hfill Aug 2022 - Jan 2023 \\[3.75pt]
     \multicolumn{2}{@{}X@{}}{
         \begin{minipage}[t]{\linewidth}
             \begin{itemize}[nosep,after=\strut, leftmargin=1em, itemsep=3pt]
-                \item[--] Analyzed the performance of blunt-body vehicles in Venus aerogravity assist missions.
-                % \item[--] Compared several performance characteristics for blunt-body vehicles with previously studied waverider vehicle concepts.
-                \item[--] Implemented a MATLAB analysis pipeline to perform parameter sweeps for varying trajectories and vehicle configurations and used it to assessed performance of blunt-body vehicles and waveriders.
-            \end{itemize}
-        \end{minipage}
-    }
-\end{tabularx}
-
-% Work Experience
-\section{Work Experience}
-\begin{tabularx}{\linewidth}{ @{}l r@{} }
-\textbf{NASA Jet Propulsion Laboratory} & \hfill Advisors: Steven Chesley, Davide Farnocchia \\[3.75pt]
-NSTGRO Visiting Technologist & \hfill May 2023 - Aug 2023 \\[3.75pt]
-    \multicolumn{2}{@{}X@{}}{
-        \begin{minipage}[t]{\linewidth}
-            \begin{itemize}[nosep,after=\strut, leftmargin=1em, itemsep=3pt]
-                \item[--] Created an efficient solar system propagator with sub-1\,km position accuracy over 250 years compared to JPL's internal small body software.
-                \item[--] Wrote an orbit determination submodule alongside the propagator that has sub-1$\sigma$ agreement with JPL small-body orbit solutions.
-                \item[--] Developed a publicly available Python package, \textsc{grss}, to allow the scientific community to accurately propagate and determine the orbits of solar system bodies. 
-            \end{itemize}
-        \end{minipage}
-    }
-\end{tabularx}
-
-\begin{tabularx}{\linewidth}{ @{}l r@{} }
-\textbf{NASA Goddard Space Flight Center} & \hfill Advisors: Kenneth Getzandanner, Andrew Liounis \\[3.75pt]
-OSIRIS-REx/OSIRIS-APEX CelNav Intern & \hfill Jun 2022 - Aug 2022 \\[3.75pt]
-    \multicolumn{2}{@{}X@{}}{
-        \begin{minipage}[t]{\linewidth}
-            \begin{itemize}[nosep,after=\strut, leftmargin=1em, itemsep=3pt]
-                \item[--] Developed simulations to assess performance of celestial navigation using onboard optical instruments during the OSIRIS-APEX cruise phase.
-                \item[--] Simulated more than 8,000 solar system bodies to obtain optimal observable clusters for the spacecraft.
-                \item[--] Performed covariance analysis using NASA's MONTE software to study the spacecraft's state uncertainty on its way to asteroid (99942) Apophis.
+                \item[--] Analyzed Venus aerogravity assist missions to significantly reduce transit times to the outer solar system.
+                \item[--] Assessed the performance of blunt-body vehicles and waveriders using a MATLAB pipeline for varying trajectories and vehicle configurations.
             \end{itemize}
         \end{minipage}
     }
@@ -197,7 +199,7 @@ Teaching Assistant for AE 352: Aerospace Dynamical Systems & \hfill Aug 2021 - D
     \multicolumn{2}{@{}X@{}}{
         \begin{minipage}[t]{\linewidth}
             \begin{itemize}[nosep,after=\strut, leftmargin=1em, itemsep=3pt]
-                \item[--] Focused on developing and teaching the aerospace curriculum's core dynamics course with aerospace applications.
+                \item[--] Focused on developing and teaching the curriculum's core dynamics course with aerospace applications.
                 \item[--] Syllabus emphasized on covering Newtonian, Lagrangian, and Hamiltonian mechanics to represent particle motion.
                 \item[--] Assisted 16 student teams with Project Clear Constellation, which called for novel methods to remove orbital debris.
             \end{itemize}
@@ -205,28 +207,28 @@ Teaching Assistant for AE 352: Aerospace Dynamical Systems & \hfill Aug 2021 - D
     }
 \end{tabularx}
 
-\begin{tabularx}{\linewidth}{ @{}l r@{} }
-    \textbf{University of Illinois at Urbana-Champaign} & \hfill Instructor: Dr. Huy Tran \\[3.75pt]
-    Undergraduate Course Assistant for AE 199: Aerospace Computing & \hfill Jan 2020 - May 2020 \\[3.75pt]
-        \multicolumn{2}{@{}X@{}}{
-            \begin{minipage}[t]{\linewidth}
-                \begin{itemize}[nosep,after=\strut, leftmargin=1em, itemsep=3pt]
-                    \item[--] Assisted with grading for a new course focused on using Python to solve problems such as analyzing air traffic data and designing Martian landers.
-                    \item[--] Worked with instructor to augment course for a fully online learning environment without affecting students due to the COVID-19 pandemic.
-                \end{itemize}
-            \end{minipage}
-        }
-\end{tabularx}
+% \begin{tabularx}{\linewidth}{ @{}l r@{} }
+%     \textbf{University of Illinois at Urbana-Champaign} & \hfill Instructor: Dr. Huy Tran \\[3.75pt]
+%     Undergraduate Course Assistant for AE 199: Aerospace Computing & \hfill Jan 2020 - May 2020 \\[3.75pt]
+%         \multicolumn{2}{@{}X@{}}{
+%             \begin{minipage}[t]{\linewidth}
+%                 \begin{itemize}[nosep,after=\strut, leftmargin=1em, itemsep=3pt]
+%                     \item[--] Assisted with grading for a new course focused on using Python to solve problems such as analyzing air traffic data and designing Martian landers.
+%                     \item[--] Worked with instructor to augment course for a fully online learning environment without affecting students due to the COVID-19 pandemic.
+%                 \end{itemize}
+%             \end{minipage}
+%         }
+% \end{tabularx}
 
 %----------------------------------------------------------------------------------------
 %	SKILLS
 %----------------------------------------------------------------------------------------
 \section{Skills}
 \begin{tabularx}{\linewidth}{@{}l X@{}}
-Programming Languages  &  Python, C++, MATLAB \\[3.75pt]
+Programming Languages  &  Python, C/C++, MATLAB, Fortran \\[3.75pt]
 Software Tools  &  \LaTeX, Git \\[3.75pt]
-Prepackaged Tools  &  MONTE, GMAT, FreeFlyer, Siemens NX \\[3.75pt]
-Operating Systems  &  Windows, Linux, MacOS \\[3.75pt]
+Prepackaged Tools  &  MONTE, GMAT, FreeFlyer \\[3.75pt]
+Operating Systems  &  Linux, MacOS, Windows \\[3.75pt]
 Languages  &  English, Gujarati, Hindi, French \\[3.75pt]
 \end{tabularx}
 
@@ -239,7 +241,11 @@ Languages  &  English, Gujarati, Hindi, French \\[3.75pt]
 NSTGRO award from NASA Space Technology Mission Directorate (STMD) & \hfill \\[3.75pt]
 \end{tabularx}
 \begin{tabularx}{\linewidth}{@{}l X@{}}
-\textbf{Double Asteroid Redirection Test (DART) Investigation Team Member} & \hfill Dec 2020 - present \\[3.75pt]
+\textbf{Achievement Rewards for College Scientists (ARCS) Scholar} & \hfill Aug 2023 - present \\[3.75pt]
+ARCS Foundation Illinois Chapter & \hfill \\[3.75pt]
+\end{tabularx}
+\begin{tabularx}{\linewidth}{@{}l X@{}}
+\textbf{Double Asteroid Redirection Test (DART) Investigation Team Member} & \hfill Dec 2020 - Nov 2023 \\[3.75pt]
 NASA/Johns Hopkins University Applied Physics Laboratory (APL) & \hfill \\[3.75pt]
 \end{tabularx}
 \begin{tabularx}{\linewidth}{@{}l X@{}}
@@ -255,7 +261,7 @@ Aerospace Engineering Department at the University of Illinois at Urbana-Champai
 University of Illinois at Urbana-Champaign & \hfill \\[3.75pt]
 \end{tabularx}
 \begin{tabularx}{\linewidth}{@{}l X@{}}
-\textbf{Hans von Muldau Team Award} & \hfill October 2019 \\[3.75pt]
+\textbf{Hans von Muldau Team Award for Best Team Project} & \hfill October 2019 \\[3.75pt]
 70\textsuperscript{th} International Astronautical Congress (IAC), Washington D.C. & \hfill \\[3.75pt]
 \end{tabularx}
 \begin{tabularx}{\linewidth}{@{}l X@{}}
