--- a/pdfs/cv/pub_journal.bib
+++ b/pdfs/cv/pub_journal.bib
@@ -4,7 +4,7 @@
 	publisher = {The American Astronomical Society},
 	title = "{Measurability of the heliocentric momentum enhancement from kinetic impactors: Applications to the Double Asteroid Redirection Test (DART) mission}",
 	year = {2023},
-	volume = {in prep.}
+	volume = {under review}
 }
 
 @article{Richardson_2023,
@@ -13,7 +13,7 @@
 	publisher = {The American Astronomical Society},
 	title = "{The Dynamical State of the Didymos System Before and After the DART Impact}",
 	year = {2023},
-	volume = {in prep.}
+	volume = {under review}
 }
 
 @article{Li_2023,
