--- a/pdfs/cv/pub_conf.bib
+++ b/pdfs/cv/pub_conf.bib
@@ -1,3 +1,13 @@
+@INPROCEEDINGS{2023DPS,
+    author = {\textbf{R. Makadia} and Steven R Chesley and Davide Farnocchia and Siegfried Eggl},
+    title = "{GRSS: An open-source small-body science tool for planetary defense}",
+    booktitle = "{55th AAS Division for Planetary Sciences Meeting}",
+    year = 2023,
+    month = oct,
+    % url = {https://ui.adsabs.harvard.edu/abs/2021DPS....5311308M},
+    adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
 @INPROCEEDINGS{2023ACM,
     author = {\textbf{R. Makadia} and Steven R Chesley and Siegfried Eggl and Damya Souami and Paolo Tanga and Kleomenis Tsiganis},
     title = "{The DART mission: Measurability of the heliocentric changes to the (65803) Didymos system}",
