--- a/pdfs/cv/cv.tex
+++ b/pdfs/cv/cv.tex
@@ -241,8 +241,8 @@ Languages  &  English, Gujarati, Hindi, French \\[3.75pt]
 NSTGRO award from NASA Space Technology Mission Directorate (STMD) & \hfill \\[3.75pt]
 \end{tabularx}
 \begin{tabularx}{\linewidth}{@{}l X@{}}
-\textbf{Achievement Rewards for College Scientists (ARCS) Scholar} & \hfill Aug 2023 - present \\[3.75pt]
-ARCS Foundation Illinois Chapter & \hfill \\[3.75pt]
+\textbf{ARCS Foundation Scholar Award} & \hfill Aug 2023 - present \\[3.75pt]
+Achievement Rewards for College Scientists (ARCS) Foundation Illinois Chapter & \hfill \\[3.75pt]
 \end{tabularx}
 \begin{tabularx}{\linewidth}{@{}l X@{}}
 \textbf{Double Asteroid Redirection Test (DART) Investigation Team Member} & \hfill Dec 2020 - Nov 2023 \\[3.75pt]
