--- a/pdfs/cv/pub_conf.bib
+++ b/pdfs/cv/pub_conf.bib
@@ -17,13 +17,13 @@
     url = {https://www.hou.usra.edu/meetings/acm2023/pdf/2128.pdf}
 }
 
-% @INPROCEEDINGS{2023DARTITM,
-%     author = {\textbf{R. Makadia} and Siegfried Eggl},
-%     title = "{Heliocentric beta ($\beta_\odot$) measurability}",
-%     booktitle = "{May 2023 DART Investigation Team Meeting}",
-%     year = 2023,
-%     month = may
-% }
+@INPROCEEDINGS{2023DARTITM,
+    author = {\textbf{R. Makadia} and Siegfried Eggl},
+    title = "{Heliocentric beta ($\beta_\odot$) measurability}",
+    booktitle = "{May 2023 DART Investigation Team Meeting}",
+    year = 2023,
+    month = may
+}
 
 @INPROCEEDINGS{2023PDC,
     author = {\textbf{R. Makadia} and Sabina Raducan and Eugene Fahnestock and Steven Chesley and Siegfried Eggl},
@@ -50,13 +50,13 @@
     url = {https://ui.adsabs.harvard.edu/abs/2022AGUFM.P55F1634M}
 }
 
-% @INPROCEEDINGS{2022DARTITM,
-%     author = {\textbf{R. Makadia} and Siegfried Eggl},
-%     title = "{Heliocentric beta ($\beta_\odot$) estimation}",
-%     booktitle = "{November 2022 DART Investigation Team Meeting}",
-%     year = 2022,
-%     month = nov
-% }
+@INPROCEEDINGS{2022DARTITM,
+    author = {\textbf{R. Makadia} and Siegfried Eggl},
+    title = "{Heliocentric beta ($\beta_\odot$) estimation}",
+    booktitle = "{November 2022 DART Investigation Team Meeting}",
+    year = 2022,
+    month = nov
+}
 
 @INPROCEEDINGS{2022AASGNC,
     author = {\textbf{R. Makadia} and Siegfried Eggl and Eugene Fahnestock},
@@ -76,23 +76,23 @@
     adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
-% @INPROCEEDINGS{2021DARTITM_1,
-%     author = {\textbf{R. Makadia} and Siegfried Eggl and Eugene Fahnestock},
-%     title = "{Changing the heliocentric orbit of the Didymos system with DART: Implications for $\beta$ determination}",
-%     booktitle = "{June 2021 DART Investigation Team Meeting}",
-%     year = 2021,
-%     month = jun,
-%     day = 17
-% }
+@INPROCEEDINGS{2021DARTITM_1,
+    author = {\textbf{R. Makadia} and Siegfried Eggl and Eugene Fahnestock},
+    title = "{Changing the heliocentric orbit of the Didymos system with DART: Implications for $\beta$ determination}",
+    booktitle = "{June 2021 DART Investigation Team Meeting}",
+    year = 2021,
+    month = jun,
+    day = 17
+}
 
-% @INPROCEEDINGS{2021DARTITM_2,
-%     author = {\textbf{R. Makadia} and Siegfried Eggl and Eugene Fahnestock and Damya Souami and Davide Farnocchia},
-%     title = "{Changing the heliocentric orbit of the Didymos system with DART: Implications for $\beta$ determination}",
-%     booktitle = "{June 2021 DART Investigation Team Meeting}",
-%     year = 2021,
-%     month = jun,
-%     day = 16
-% }
+@INPROCEEDINGS{2021DARTITM_2,
+    author = {\textbf{R. Makadia} and Siegfried Eggl and Eugene Fahnestock and Damya Souami and Davide Farnocchia},
+    title = "{Changing the heliocentric orbit of the Didymos system with DART: Implications for $\beta$ determination}",
+    booktitle = "{June 2021 DART Investigation Team Meeting}",
+    year = 2021,
+    month = jun,
+    day = 16
+}
 
 @INPROCEEDINGS{2021PDC,
     author = {\textbf{R. Makadia} and Siegfried Eggl and Eugene Fahnestock and Steve Chesley and Davide Farnocchia and Nian Tong},
