--- a/pdfs/cv/pub_journal.bib
+++ b/pdfs/cv/pub_journal.bib
@@ -16,6 +16,24 @@
 	volume = {under review}
 }
 
+@article{Chabot_2023,
+	author = {Nancy L. Chabot and author 2 and author 3 and author 4},
+	journal = {The Planetary Science Journal},
+	publisher = {The American Astronomical Society},
+	title = "{Achievement of the Planetary Defense Investigations of the Double Asteroid Redirection Test (DART) Mission}",
+	year = {2023},
+	volume = {under review}
+}
+
+@article{Hirabayashi_2023,
+	author = {Masatoshi Hirabayashi and author 2 and author 3 and author 4},
+	journal = {Nature Communications},
+	publisher = {Nature Portfolio},
+	title = "{Kinetic deflection change due to target global curvature as revealed by NASA / DART.}",
+	year = {2023},
+	volume = {submitted}
+}
+
 @article{Li_2023,
 author = {Li, Jian-Yang and Hirabayashi, Masatoshi and Farnham, Tony L. and Sunshine, Jessica M. and Knight, Matthew M. and Tancredi, Gonzalo and Moreno, Fernando and Murphy, Brian and Opitom, Cyrielle and Chesley, Steve and Scheeres, Daniel J. and Thomas, Cristina A. and Fahnestock, Eugene G. and Cheng, Andrew F. and Dressel, Linda and Ernst, Carolyn M. and Ferrari, Fabio and Fitzsimmons, Alan and Ieva, Simone and Ivanovski, Stavro L. and Kareta, Teddy and Kolokolova, Ludmilla and Lister, Tim and Raducan, Sabina D. and Rivkin, Andrew S. and Rossi, Alessandro and Soldini, Stefania and Stickle, Angela M. and Vick, Alison and Vincent, Jean-Baptiste and Weaver, Harold A. and Bagnulo, Stefano and Bannister, Michele T. and Cambioni, Saverio and Bagatin, Adriano Campo and Chabot, Nancy L. and Cremonese, Gabriele and Daly, R. Terik and Dotto, Elisabetta and Glenar, David A. and Granvik, Mikael and Hasselmann, Pedro H. and Herreros, Isabel and Jacobson, Seth and Jutzi, Martin and Kohout, Tomas and La Forgia, Fiorangela and Lazzarin, Monica and Lin, Zhong-Yi and Lolachi, Ramin and Lucchetti, Alice and \textbf{R. Makadia} and Epifani, Elena Mazzotta and Michel, Patrick and Migliorini, Alessandra and Moskovitz, Nicholas A. and Orm{\"o}, Jens and Pajola, Maurizio and S{\'a}nchez, Paul and Schwartz, Stephen R. and Snodgrass, Colin and Steckloff, Jordan and Stubbs, Timothy J. and Trigo-Rodr{\'i}guez, Josep M.},
 title="{Ejecta from the DART-produced active asteroid Dimorphos}",
