updated layout; cv

--- a/pdfs/cv/cv.tex
+++ b/pdfs/cv/cv.tex
@@ -146,11 +146,11 @@ NSTGRO Visiting Technologist & \hfill May 2023 - Aug 2023 \\[3.75pt]
 
 \begin{tabularx}{\linewidth}{ @{}l r@{} }
 \textbf{NASA Goddard Space Flight Center} & \hfill Advisors: Kenneth Getzandanner, Andrew Liounis \\[3.75pt]
-OSIRIS-REx/OSIRIS-APEX Celestial Navigation Intern & \hfill Jun 2022 - Aug 2022 \\[3.75pt]
+OSIRIS-REx/OSIRIS-APEX CelNav Intern & \hfill Jun 2022 - Aug 2022 \\[3.75pt]
     \multicolumn{2}{@{}X@{}}{
         \begin{minipage}[t]{\linewidth}
             \begin{itemize}[nosep,after=\strut, leftmargin=1em, itemsep=3pt]
-                \item[--] Developed simulations to assess performance of celestial navigation using onboard optical instruments during the OSIRIS-APEX cruise phase.
+                \item[--] Developed simulations to assess performance of CelNav (Celestial Navigation) using onboard optical instruments during the OSIRIS-APEX cruise phase.
                 \item[--] Simulated more than 8,000 solar system bodies to obtain optimal observable clusters for the spacecraft.
                 \item[--] Performed covariance analysis using NASA's MONTE software to study the spacecraft's state uncertainty on its way to asteroid (99942) Apophis.
             \end{itemize}
