--- a/pdfs/cv/pub_journal_prim.bib
+++ b/pdfs/cv/pub_journal_prim.bib
@@ -2,7 +2,7 @@
 	author = {\textbf{R. Makadia} and author 2 and author 3 and author 4},
 	journal = {The Planetary Science Journal},
 	publisher = {The American Astronomical Society},
-	title = "{Measurability of the heliocentric momentum enhancement from kinetic impactors: Applications to the Double Asteroid Redirection Test (DART) mission}",
+	title = "{Estimation of the Heliocentric Momentum Enhancement from a Kinetic Impact: The Double Asteroid Redirection Test (DART) Mission}",
 	year = {2023},
 	volume = {under review}
 }
