--- a/pdfs/cv/pub_conf.bib
+++ b/pdfs/cv/pub_conf.bib
@@ -4,7 +4,7 @@
     booktitle = "{55th AAS Division for Planetary Sciences Meeting}",
     year = 2023,
     month = oct,
-    % url = {https://ui.adsabs.harvard.edu/abs/2021DPS....5311308M},
+    url = {https://ui.adsabs.harvard.edu/abs/2023DPS....5540502M},
     adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
@@ -38,7 +38,8 @@
     title = "{Assessment of aerogravity assist at Venus using blunt-body vehicles}",
     booktitle = "{33rd AAS/AIAA Space Flight Mechanics Meeting}",
     year = 2023,
-    month = jan
+    month = jan,
+    url = {https://www.researchgate.net/publication/375757595}
 }
 
 @INPROCEEDINGS{2022FALLAGU,
