--- a/pdfs/cv/cv.tex
+++ b/pdfs/cv/cv.tex
@@ -88,7 +88,6 @@
 
 %flag for digital CV
 \newif\ifdigital
-\digitaltrue
 
 %----------------------------------------------------------------------------------------
 %	BEGIN DOCUMENT
@@ -101,16 +100,18 @@
 %----------------------------------------------------------------------------------------
 %	TITLE
 %----------------------------------------------------------------------------------------
+\digitaltrue
 
 \begin{tabularx}{\linewidth}{@{} C @{}}
 \Huge{Rahil Makadia} \\[7.5pt]
 \ifdigital
-\href{mailto:makadia2@illinois.edu}{\raisebox{-0.05\height}\faEnvelope \ makadia2@illinois.edu} \ $|$ \ 
+\href{mailto:makadia2@illinois.edu}{\raisebox{-0.05\height}\faEnvelope \ Email} \ $|$ \ 
+\href{https://github.com/rahil-makadia}{\raisebox{-0.05\height}\faGithub\ GitHub} \ $|$ \ 
+\href{https://rahil-makadia.github.io}{\raisebox{-0.05\height}\faGlobeAmericas \ Website} \ $|$ \ 
 \href{https://linkedin.com/in/rahil-makadia}{\raisebox{-0.05\height}\faLinkedin\ LinkedIn} \ $|$ \ 
-\href{https://rahil-makadia.github.io}{\raisebox{-0.05\height}\faGlobe \ Website} \ $|$ \ 
-\href{https://github.com/rahil-makadia}{\raisebox{-0.05\height}\faGithub\ GitHub} \\
+\href{https://www.researchgate.net/profile/Rahil-Makadia}{\raisebox{-0.05\height}\faResearchgate\ ResearchGate} \\
 \else
-\href{mailto:makadia2@illinois.edu}{\raisebox{-0.05\height}\faEnvelope \ makadia2@illinois.edu} \ $|$ \ 
+\href{https://rahil-makadia.github.io}{\raisebox{-0.05\height}\faGlobeAmericas \ https://rahil-makadia.github.io} \ $|$ \ 
 307 Talbot Laboratory, 104 S Wright St, Urbana IL 61801, USA \\
 \fi
 \end{tabularx}
@@ -161,7 +162,7 @@ OSIRIS-REx/OSIRIS-APEX CelNav Intern & \hfill Jun 2022 - Aug 2022 \\[3.75pt]
 % Research Experience
 \section{Research Experience}
 \begin{tabularx}{\linewidth}{ @{}l r@{} }
-\textbf{Astrodynamics and Planetary Exploration Research Group} & \hfill Advisor: Dr. Siegfried Eggl \\[3.75pt]
+\textbf{Astrodynamics and Planetary Exploration Group} & \hfill Advisor: Dr. Siegfried Eggl \\[3.75pt]
 Double Asteroid Redirection Test (DART) Mission & \hfill May 2020 - present \\[3.75pt]
     \multicolumn{2}{@{}X@{}}{
         \begin{minipage}[t]{\linewidth}
@@ -289,7 +290,7 @@ University of Illinois at Urbana-Champaign & \hfill \\[3.75pt]
 \section{Journal Articles}
 \vspace{0.05in}
 \begin{center}
-\textsc{Primary Author}
+\textsc{Significant Author}
 \end{center}
 \begin{refsection}[pub_journal_prim.bib]
 \nocite{*}
@@ -298,7 +299,7 @@ University of Illinois at Urbana-Champaign & \hfill \\[3.75pt]
 
 \vspace{0.05in}
 \begin{center}
-\textsc{Secondary Author}
+\textsc{Supporting Author}
 \end{center}
 \begin{refsection}[pub_journal_sec.bib]
 \nocite{*}
