--- a/pdfs/cv/pub_journal_prim.bib
+++ b/pdfs/cv/pub_journal_prim.bib
@@ -1,18 +1,18 @@
-@article{Makadia_2023,
+@article{Makadia_2024,
 	author = {\textbf{R. Makadia} and author 2 and author 3 and author 4},
 	journal = {The Planetary Science Journal},
 	publisher = {The American Astronomical Society},
 	title = "{Estimation of the Heliocentric Momentum Enhancement from a Kinetic Impact: The Double Asteroid Redirection Test (DART) Mission}",
-	year = {2023},
-	volume = {under review}
+	year = {2024},
+	volume = {in press}
 }
 
-@article{Richardson_2023,
+@article{Richardson_2024,
 	author = {Derek C. Richardson and author 2 and author 3 and author 4},
 	journal = {The Planetary Science Journal},
 	publisher = {The American Astronomical Society},
 	title = "{The Dynamical State of the Didymos System Before and After the DART Impact}",
-	year = {2023},
+	year = {2024},
 	volume = {under review}
 }
 
