--- a/pdfs/cv/cv.tex
+++ b/pdfs/cv/cv.tex
@@ -296,23 +296,23 @@ University of Illinois at Urbana-Champaign & \hfill \\[3.75pt]
 %----------------------------------------------------------------------------------------
 \newpage
 \section{Journal Articles}
-\vspace{0.05in}
-\begin{center}
-\textsc{Significant Author}
-\end{center}
+% \vspace{0.05in}
+% \begin{center}
+% \textsc{Significant Author}
+% \end{center}
 \begin{refsection}[pub_journal_prim.bib]
 \nocite{*}
 \printbibliography[heading=none]
 \end{refsection}
 
-\vspace{0.05in}
-\begin{center}
-\textsc{Supporting Author}
-\end{center}
-\begin{refsection}[pub_journal_sec.bib]
-\nocite{*}
-\printbibliography[heading=none]
-\end{refsection}
+% \vspace{0.05in}
+% \begin{center}
+% \textsc{Supporting Author}
+% \end{center}
+% \begin{refsection}[pub_journal_sec.bib]
+% \nocite{*}
+% \printbibliography[heading=none]
+% \end{refsection}
 
 \section{Conference and Meeting Proceedings}
 \begin{refsection}[pub_conf.bib]
