--- a/pdfs/cv/pub_journal_prim.bib
+++ b/pdfs/cv/pub_journal_prim.bib
@@ -1,3 +1,30 @@
+@article{Richardson_2024,
+	author = {Derek C. Richardson and author 2 and author 3 and author 4},
+	journal = {The Planetary Science Journal},
+	publisher = {The American Astronomical Society},
+	title = "{The Dynamical State of the Didymos System Before and After the DART Impact}",
+	year = {2024},
+	volume = {under review}
+}
+
+@article{Hirabayashi_2024,
+	author = {Masatoshi Hirabayashi and author 2 and author 3 and author 4},
+	journal = {Nature Communications},
+	publisher = {Nature Portfolio},
+	title = "{Kinetic deflection change due to target global curvature as revealed by NASA / DART.}",
+	year = {2024},
+	volume = {under review}
+}
+
+@article{Chabot_2024,
+	author = {Nancy L. Chabot and author 2 and author 3 and author 4},
+	journal = {The Planetary Science Journal},
+	publisher = {The American Astronomical Society},
+	title = "{Achievement of the Planetary Defense Investigations of the Double Asteroid Redirection Test (DART) Mission}",
+	year = {2024},
+	volume = {in press}
+}
+
 @article{Makadia_2024,
 	author = {\textbf{R. Makadia} and author 2 and author 3 and author 4},
 	journal = {The Planetary Science Journal},
@@ -7,13 +34,34 @@
 	volume = {in press}
 }
 
-@article{Richardson_2024,
-	author = {Derek C. Richardson and author 2 and author 3 and author 4},
+@article{Li_2023,
+author = {Li, Jian-Yang and Hirabayashi, Masatoshi and Farnham, Tony L. and Sunshine, Jessica M. and Knight, Matthew M. and Tancredi, Gonzalo and Moreno, Fernando and Murphy, Brian and Opitom, Cyrielle and Chesley, Steve and Scheeres, Daniel J. and Thomas, Cristina A. and Fahnestock, Eugene G. and Cheng, Andrew F. and Dressel, Linda and Ernst, Carolyn M. and Ferrari, Fabio and Fitzsimmons, Alan and Ieva, Simone and Ivanovski, Stavro L. and Kareta, Teddy and Kolokolova, Ludmilla and Lister, Tim and Raducan, Sabina D. and Rivkin, Andrew S. and Rossi, Alessandro and Soldini, Stefania and Stickle, Angela M. and Vick, Alison and Vincent, Jean-Baptiste and Weaver, Harold A. and Bagnulo, Stefano and Bannister, Michele T. and Cambioni, Saverio and Bagatin, Adriano Campo and Chabot, Nancy L. and Cremonese, Gabriele and Daly, R. Terik and Dotto, Elisabetta and Glenar, David A. and Granvik, Mikael and Hasselmann, Pedro H. and Herreros, Isabel and Jacobson, Seth and Jutzi, Martin and Kohout, Tomas and La Forgia, Fiorangela and Lazzarin, Monica and Lin, Zhong-Yi and Lolachi, Ramin and Lucchetti, Alice and \textbf{R. Makadia} and Epifani, Elena Mazzotta and Michel, Patrick and Migliorini, Alessandra and Moskovitz, Nicholas A. and Orm{\"o}, Jens and Pajola, Maurizio and S{\'a}nchez, Paul and Schwartz, Stephen R. and Snodgrass, Colin and Steckloff, Jordan and Stubbs, Timothy J. and Trigo-Rodr{\'i}guez, Josep M.},
+title="{Ejecta from the DART-produced active asteroid Dimorphos}",
+journal={Nature},
+year={2023},
+month={04},
+day={01},
+volume={616},
+number={7957},
+pages={452-456},
+abstract={Some active asteroids have been proposed to be formed as a result of impact events1. Because active asteroids are generally discovered by chance only after their tails have fully formed, the process of how impact ejecta evolve into a tail has, to our knowledge, not been directly observed. The Double Asteroid Redirection Test (DART) mission of NASA2, in addition to having successfully changed the orbital period of Dimorphos3, demonstrated the activation process of an asteroid resulting from an impact under precisely known conditions. Here we report the observations of the DART impact ejecta with the Hubble Space Telescope from impact time T{\thinspace}+{\thinspace}15{\thinspace}min to T{\thinspace}+{\thinspace}18.5{\thinspace}days at spatial resolutions of around 2.1{\thinspace}km per pixel. Our observations reveal the complex evolution of the ejecta, which are first dominated by the gravitational interaction between the Didymos binary system and the ejected dust and subsequently by solar radiation pressure. The lowest-speed ejecta dispersed through a sustained tail that had a consistent morphology with previously observed asteroid tails thought to be produced by an impact4,5. The evolution of the ejecta after the controlled impact experiment of DART thus provides a framework for understanding the fundamental mechanisms that act on asteroids disrupted by a natural impact1,6.},
+issn={1476-4687},
+doi={10.1038/s41586-023-05811-4},
+url={https://doi.org/10.1038/s41586-023-05811-4}
+}
+
+@article{Statler_2022,
+	author = {Thomas S. Statler and Sabina D. Raducan and Olivier S. Barnouin and Mallory E. DeCoster and Steven R. Chesley and Brent Barbee and Harrison F. Agrusa and Saverio Cambioni and Andrew F. Cheng and Elisabetta Dotto and Siegfried Eggl and Eugene G. Fahnestock and Fabio Ferrari and Dawn Graninger and Alain Herique and Isabel Herreros and Masatoshi Hirabayashi and Stavro Ivanovski and Martin Jutzi and {\"O}zg{\"u}r Karatekin and Alice Lucchetti and Robert Luther and \textbf{R. Makadia} and Francesco Marzari and Patrick Michel and Naomi Murdoch and Ryota Nakano and Jens Orm{\"o} and Maurizio Pajola and Andrew S. Rivkin and Alessandro Rossi and Paul S{\'a}nchez and Stephen R. Schwartz and Stefania Soldini and Damya Souami and Angela Stickle and Paolo Tortora and Josep M. Trigo-Rodr{\'i}guez and Flaviane Venditti and Jean-Baptiste Vincent and Kai W{\"u}nnemann},
+	doi = {10.3847/PSJ/ac94c1},
 	journal = {The Planetary Science Journal},
+	month = {10},
+	number = {10},
+	pages = {244},
 	publisher = {The American Astronomical Society},
-	title = "{The Dynamical State of the Didymos System Before and After the DART Impact}",
-	year = {2024},
-	volume = {under review}
+	title = "{After DART: Using the First Full-scale Test of a Kinetic Impactor to Inform a Future Planetary Defense Mission}",
+	url = {https://dx.doi.org/10.3847/PSJ/ac94c1},
+	volume = {3},
+	year = {2022}
 }
 
 @article{Makadia_2022,
