--- a/pdfs/cv/cv.tex
+++ b/pdfs/cv/cv.tex
@@ -112,6 +112,7 @@
 
 \begin{tabularx}{\linewidth}{@{} C @{}}
 \Huge{Rahil Makadia} \\[7.5pt]
+% \faPhone\,+1 (000) 000-0000 \\[2.5pt]
 \ifdigital
 \href{mailto:makadia2@illinois.edu}{\raisebox{-0.05\height}\faEnvelope \ Email} \ $|$ \
 307 Talbot Laboratory, 104 S Wright St, Urbana IL 61801, USA \ $|$ \
